--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta description="Forex Trend Indicator" />
     <title>Forex Trend Indicator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
@@ -12,9 +13,9 @@
       <div class="pair-input">
         <label for="pair">Select Forex Pair:</label>
         <select id="pair">
-          <option value="EURUSD">EUR/USD</option>
-          <option value="GBPUSD">GBP/USD</option>
-          <option value="USDJPY">USD/JPY</option>
+          <option value="EURUSD">EUR</option>
+          <option value="GBPUSD">GBP</option>
+          <option value="USDJPY">AUD</option>
           <!-- Add more currency pairs here -->
         </select>
       </div>
@@ -26,7 +27,7 @@
 
       <div id="result" class="hidden"></div>
     </div>
-    <!-- Include the JavaScript file with the 'defer' attribute -->
+
     <script src="./dist/main.js"></script>
   </body>
 </html>
