make result div visible

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
       <!-- Add a single button to fetch information based on the selected pair -->
       <div class="button-container">
-        <button id="fetchInfo">Fetch Info</button>
+        <button id="fetchInfo" class="btn btn-primary">Fetch Info</button>
       </div>
 
-      <div id="result" class="hidden"></div>
+      <div id="result" class="mt-4"></div>
     </div>
 
     <script src="./dist/main.js"></script>
