--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Forex Trend Indicator</h1>
       <div class="pair-input">
         <label for="basePair">Select Base Pair:</label>
-        <select id="basePair">
+        <select id="basePair" class="form-select">
           <option value="USD">USD</option>
           <option value="EUR">EUR</option>
           <option value="GBP">GBP</option>
@@ -26,7 +26,7 @@
 
       <div class="pair-input">
         <label for="pair">Select Forex Pair:</label>
-        <select id="pair">
+        <select id="pair" class="form-select">
           <option value="USD">USD</option>
           <option value="EUR">EUR</option>
           <option value="GBP">GBP</option>
@@ -36,8 +36,15 @@
         </select>
       </div>
 
-      <!-- Add a single button to fetch information based on the selected pair -->
-      <div class="button-container">
+      <div class="pair-input">
+        <label for="indicatorType">Select Indicator Type:</label>
+        <select id="indicatorType" class="form-select">
+          <option value="SMA">SMA</option>
+          <option value="EMA">EMA</option>
+        </select>
+      </div>
+
+      <div class="button-container mt-3">
         <button id="fetchInfo" class="btn btn-primary">Fetch Info</button>
       </div>
 
